
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int pr_mflags; int pr_vaddr; } ;
typedef TYPE_1__ prmap_t ;
typedef int map ;


 int MA_EXEC ;
 int MA_READ ;
 int MA_WRITE ;
 int O_RDONLY ;
 int close (int) ;
 int exit (int) ;
 int fprintf (int ,char*,char*) ;
 scalar_t__ getpid () ;
 int open (char*,int ) ;
 scalar_t__ read (int,TYPE_1__*,int) ;
 int sprintf (char*,char*,int) ;
 int stderr ;

int search_rwx_mem(void)
{
 int fd;
 char tmp[16];
 prmap_t map;
 int addr = 0;


 sprintf(tmp,"/proc/%d/map", (int)getpid());
 if ((fd = open(tmp, O_RDONLY)) < 0) {
  fprintf(stderr, "can't open %s\n", tmp);
  exit(1);
 }


 while (read(fd, &map, sizeof(map)))
  if (map.pr_mflags == (MA_READ | MA_WRITE | MA_EXEC))
   addr = map.pr_vaddr;
 close(fd);


 if (!(addr & 0xff))
  addr |= 0x04;
 if (!(addr & 0xff00))
  addr |= 0x0400;

 return(addr);
}
