; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_2360.c_search_rwx_mem.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_2360.c_search_rwx_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [13 x i8] c"/proc/%d/map\00", align 1
@O_RDONLY = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [15 x i8] c"can't open %s\0A\00", align 1
@MA_READ = common dso_local global i32 0, align 4
@MA_WRITE = common dso_local global i32 0, align 4
@MA_EXEC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @search_rwx_mem() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [16 x i8], align 16
  %3 = alloca %struct.TYPE_3__, align 4
  %4 = alloca i32, align 4
  store i32 0, i32* %4, align 4
  %5 = getelementptr inbounds [16 x i8], [16 x i8]* %2, i64 0, i64 0
  %6 = call i64 (...) @getpid()
  %7 = trunc i64 %6 to i32
  %8 = call i32 @sprintf(i8* %5, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %7)
  %9 = getelementptr inbounds [16 x i8], [16 x i8]* %2, i64 0, i64 0
  %10 = load i32, i32* @O_RDONLY, align 4
  %11 = call i32 @open(i8* %9, i32 %10)
  store i32 %11, i32* %1, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %0
  %14 = load i32, i32* @stderr, align 4
  %15 = getelementptr inbounds [16 x i8], [16 x i8]* %2, i64 0, i64 0
  %16 = call i32 @fprintf(i32 %14, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* %15)
  %17 = call i32 @exit(i32 1) #3
  unreachable

18:                                               ; preds = %0
  br label %19

19:                                               ; preds = %35, %18
  %20 = load i32, i32* %1, align 4
  %21 = call i64 @read(i32 %20, %struct.TYPE_3__* %3, i32 8)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %36

23:                                               ; preds = %19
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @MA_READ, align 4
  %27 = load i32, i32* @MA_WRITE, align 4
  %28 = or i32 %26, %27
  %29 = load i32, i32* @MA_EXEC, align 4
  %30 = or i32 %28, %29
  %31 = icmp eq i32 %25, %30
  br i1 %31, label %32, label %35

32:                                               ; preds = %23
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %32, %23
  br label %19

36:                                               ; preds = %19
  %37 = load i32, i32* %1, align 4
  %38 = call i32 @close(i32 %37)
  %39 = load i32, i32* %4, align 4
  %40 = and i32 %39, 255
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %45, label %42

42:                                               ; preds = %36
  %43 = load i32, i32* %4, align 4
  %44 = or i32 %43, 4
  store i32 %44, i32* %4, align 4
  br label %45

45:                                               ; preds = %42, %36
  %46 = load i32, i32* %4, align 4
  %47 = and i32 %46, 65280
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %52, label %49

49:                                               ; preds = %45
  %50 = load i32, i32* %4, align 4
  %51 = or i32 %50, 1024
  store i32 %51, i32* %4, align 4
  br label %52

52:                                               ; preds = %49, %45
  %53 = load i32, i32* %4, align 4
  ret i32 %53
}

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i64 @getpid(...) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i64 @read(i32, %struct.TYPE_3__*, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
